# serializer version: 1
# name: test_blind_entity_setup[mock_blind][cover.test_blind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_blind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 255>,
    'translation_key': None,
    'unique_id': '4711',
    'unit_of_measurement': None,
  })
# ---
# name: test_blind_entity_setup[mock_blind][cover.test_blind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 60,
      'current_tilt_position': 75,
      'device_class': 'blind',
      'friendly_name': 'Test Blind',
      'supported_features': <CoverEntityFeature: 255>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_blind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Awning][cover.test_class_pyvlx_opening_device_awning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_class_pyvlx_opening_device_awning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.AWNING: 'awning'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Awning',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Awning][cover.test_class_pyvlx_opening_device_awning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 70,
      'device_class': 'awning',
      'friendly_name': "Test <class 'pyvlx.opening_device.Awning'>",
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_class_pyvlx_opening_device_awning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-GarageDoor][cover.test_class_pyvlx_opening_device_garagedoor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_class_pyvlx_opening_device_garagedoor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_GarageDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-GarageDoor][cover.test_class_pyvlx_opening_device_garagedoor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 70,
      'device_class': 'garage',
      'friendly_name': "Test <class 'pyvlx.opening_device.GarageDoor'>",
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_class_pyvlx_opening_device_garagedoor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Gate][cover.test_class_pyvlx_opening_device_gate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_class_pyvlx_opening_device_gate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GATE: 'gate'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Gate',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Gate][cover.test_class_pyvlx_opening_device_gate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 70,
      'device_class': 'gate',
      'friendly_name': "Test <class 'pyvlx.opening_device.Gate'>",
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_class_pyvlx_opening_device_gate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-RollerShutter][cover.test_class_pyvlx_opening_device_rollershutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_class_pyvlx_opening_device_rollershutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_RollerShutter',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-RollerShutter][cover.test_class_pyvlx_opening_device_rollershutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 70,
      'device_class': 'shutter',
      'friendly_name': "Test <class 'pyvlx.opening_device.RollerShutter'>",
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_class_pyvlx_opening_device_rollershutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Window][cover.test_class_pyvlx_opening_device_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_class_pyvlx_opening_device_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Window',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Window][cover.test_class_pyvlx_opening_device_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 70,
      'device_class': 'window',
      'friendly_name': "Test <class 'pyvlx.opening_device.Window'>",
      'supported_features': <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_class_pyvlx_opening_device_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
